tests/parser/good/unit.hel
// @name unit
// @phase parser
// @expect success

x = ();
f = () : () { () }
