tests/parser/bad/unexpected_char.hel
// @name unexpected_char
// @phase parser
// @expect error

x = @;
